# Brumskii-Art2

./: .gitignore  CMakeLists.txt  README.md
include/Brumskii-Art2/: Brumskii-Art2.hpp
src/: Brumskii-Art2.cpp  main.cpp
src/cpp/: Brumskii-Art2.cpp  main.cpp
src/kotlin/: Brumskii-Art2-kt.cpp  Brumskii-Art2.kt
src/python/: Brumskii-Art2-py.cpp  Brumskii-Art2.py
